--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -24,12 +24,17 @@
     border: 2px solid $Black;
     padding: 0.5rem 0.5rem;
     border-radius: 27px;
+    transition: all 0.1s ease;
+    &:active {
+      background-color: $Black;
+      color: $Stone;
+    }
   }
 }
 
 a {
   text-decoration: none;
   color: $Black;
-  font-size:18px;
+  font-size: 18px;
   font-weight: 600;
 }
