adds topic page - corrects routing

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,1 +1,37 @@
+@use "./variables" as *;
 
+@mixin card-style($color) {
+  background-color: $color;
+  border: 2px solid $Black;
+  border-radius: 15px;
+  box-shadow: -4px 4px $Black;
+  transition: all 0.2s ease; // Smooth transition effect
+  &:active {
+    box-shadow: 0 0 0 $Black; // Removes the shadow
+    transform: translate(-4px, 4px);
+  }
+}
+
+@mixin background-card-style($color) {
+  background-color: $color;
+  height: 80vh;
+  border: 1px solid $Black;
+  border-radius: 20px 20px 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+@mixin heading-one {
+  font-size: 2rem;
+  font-style: italic;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+
+@mixin heading-three {
+  font-size: 22px;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
