--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,4 +1,5 @@
 @use "../../styles/variables" as *;
+@use "../../styles/mixins" as *;
 
 body {
   background-color: $Stone;
@@ -17,28 +18,53 @@ body {
 .physics {
   height: 170px;
   width: 80%;
-  background-color: $Sky;
-  border: 2px solid $Black;
-  border-radius: 15px;
-  box-shadow: -4px 4px $Black;
-  transition: all 0.2s ease; // Smooth transition effect
-  &:active {
-    box-shadow: 0 0 0 $Black; // Removes the shadow
-    transform: translate(-4px, 4px);
-  }
+  @include card-style($Sky);
+  padding: 1.5rem 1rem;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-image: url("../../assets/physics-home.png");
+  background-position-x: -20px;
+  background-size: 180px;
+  background-repeat: no-repeat;
 }
 
 .math {
   height: 170px;
   width: 80%;
-  background-color: $Clementine;
-  border: 2px solid $Black;
-  border-radius: 15px;
-  box-shadow: -4px 4px $Black;
-  transition: all 0.2s ease; // Smooth transition effect
+  padding: 1rem;
+  @include card-style($Clementine);
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: flex-end;
+  background-image: url("../../assets/math-home.png");
+  background-position-x: -20px;
+  background-size: 200px;
+  background-repeat: no-repeat;
+}
 
-  &:active {
-    box-shadow: 0 0 0 $Black; // Removes the shadow
-    transform: translate(-4px, 4px);
+.card {
+  &__physics-icon,
+  &__math-icon {
+    background-color: $Stone;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 40px 40px;
+  }
+  &__physics-icon {
+    background-image: url("../../assets/physics-icon.svg");
+  }
+  &__math-icon {
+    background-image: url("../../assets/math-icon.svg");
+  }
+  &__title {
+    font-size: 1.75rem;
+    margin-top: 1rem;
+    font-weight: 700;
   }
 }
