--- a/src/pages/TopicPage/TopicPage.scss
+++ b/src/pages/TopicPage/TopicPage.scss
@@ -2,18 +2,27 @@
 @use "../../styles/mixins" as *;
 .topic-page {
   &__container {
-    @include background-card-style($Lilac);
+    @include background-card-style($Stone2);
     justify-content: flex-start;
+    &--kinematics {
+      @include background-card-style($Lilac);
+    }
+    &--forces {
+      @include background-card-style($Coral);
+    }
+    &--circuits {
+      @include background-card-style($Clementine);
+    }
   }
 
   &__title {
     @include heading-one;
-    font-weight:600;
+    font-weight: 600;
   }
 
   &__notes-container,
   &__pq-container {
-    @include card-style($Lilac);
+    @include card-style($Stone2);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,6 +30,15 @@
     width: 75%;
     margin-bottom: 2rem;
     height: 30vh;
+    &--kinematics {
+      @include card-style($Lilac);
+    }
+    &--forces {
+      @include card-style($Coral);
+    }
+    &--circuits {
+      @include card-style($Clementine);
+    }
   }
 
   &__notes-title,
