--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -19,8 +19,9 @@
   border-radius: 20px 20px 0 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
+  z-index: 1;
+  margin-top: -1.875rem;
 }
 @mixin heading-one {
   font-size: 2rem;
