--- a/src/components/AllQuestions/AllQuestions.scss
+++ b/src/components/AllQuestions/AllQuestions.scss
@@ -12,7 +12,7 @@
     color: $Plum;
     padding: 0 5px;
     border-radius: 10px;
-    &:active {
+    &.selected {
       background-color: $Plum;
       color: $Lilac;
     }
