--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -4,37 +4,49 @@
 .nav-bar {
   display: flex;
   justify-content: space-evenly;
-  background-color: $Plum;
   padding: 0.5rem;
   width: 90%;
   border-radius: 15px;
   border: 2px solid $Black;
+  &--purple {
+    background-color: $Plum;
+  }
+  &--red {
+    background-color: $Red;
+  }
+  &--orange {
+    background-color: $Sunset;
+  }
 }
 
-.physics-icon,
-.math-icon,
-.book-icon,
-.about-icon {
+.icon {
   width: 50px;
   height: 50px;
   background-repeat: no-repeat;
   background-size: 30px 30px;
   background-position: center;
-  background-color: $Lilac;
   border-radius: 50%;
   border: 1px solid $Black;
-}
 
-.physics-icon {
-  background-image: url("../../assets/physics-icon.svg");
-}
-
-.math-icon {
-  background-image: url("../../assets/math-icon.svg");
-}
-.book-icon {
-  background-image: url("../../assets/book-icon.png");
-}
-.about-icon {
-  background-image: url("../../assets/about-icon.png");
+  &--purple {
+    background-color: $Lilac;
+  }
+  &--red {
+    background-color: $Coral;
+  }
+  &--orange {
+    background-color: $Clementine;
+  }
+  &--physics {
+    background-image: url("../../assets/physics-icon.svg");
+  }
+  &--math {
+    background-image: url("../../assets/math-icon.svg");
+  }
+  &--book {
+    background-image: url("../../assets/book-icon.png");
+  }
+  &--about {
+    background-image: url("../../assets/about-icon.png");
+  }
 }
