--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -12,7 +12,7 @@
     background-color: $Plum;
   }
   &--red {
-    background-color: $Red;
+    background-color: $DarkRed;
   }
   &--orange {
     background-color: $Sunset;
@@ -32,7 +32,7 @@
     background-color: $Lilac;
   }
   &--red {
-    background-color: $Coral;
+    background-color: $Red;
   }
   &--orange {
     background-color: $Clementine;
