--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,5 +13,6 @@ $Sunset: #d36a0d;
 $Bubblegum: #eeaacd;
 $Barbie: #e477af;
 $Red: #e15554;
+$DarkRed: #98292b;
 $Coral: #e77373;
 $Stone2: #f3ebe5;
