--- a/src/components/HeaderNoNav/HeaderNoNav.scss
+++ b/src/components/HeaderNoNav/HeaderNoNav.scss
@@ -14,6 +14,9 @@
   &--orange {
     background-color: $Clementine;
   }
+  &--red {
+    background-color: $Coral;
+  }
 
   &__logo {
     width: 100%;
@@ -22,6 +25,4 @@
     width: 90%;
     align-self: center;
   }
-
-
 }
