--- a/src/components/AllQuestions/AllQuestions.scss
+++ b/src/components/AllQuestions/AllQuestions.scss
@@ -2,22 +2,35 @@
 @use "../../styles/variables" as *;
 
 .all-q {
+  &__container {
+    display: flex;
+    flex-direction: column;
+  }
   &__tags-container {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
   }
+  &__questions-container {
+    margin: 0;
+    padding: 0;
+  }
   &__tag {
     padding: 0 5px;
     border-radius: 10px;
+    font-size: 0.75rem;
 
     &--red {
       background-color: $Coral;
-      color: $DarkRed;
+      color: $Black;
     }
     &--orange {
       background-color: $Clementine;
       color: $Black;
+    }
+    &--purple {
+      background-color: $Lilac;
+      color: $Plum;
     }
     &--selected-purple {
       background-color: $Plum;
@@ -32,12 +45,17 @@
       color: $Stone;
     }
   }
+  &__title {
+    @include heading-one;
+    margin: 1rem 0 0.5rem 0;
+  }
   &__list {
     list-style: decimal;
-    padding: 0;
-    margin: 2rem;
+    padding: 0 1rem;
   }
   &__list-item {
     border-bottom: 1px solid $Black;
+    padding: 0.5rem 0;
+    font-size: 0.75rem;
   }
 }
