fixes styling on header

--- a/src/components/AllQuestions/AllQuestions.scss
+++ b/src/components/AllQuestions/AllQuestions.scss
@@ -16,7 +16,7 @@
     padding: 0;
   }
   &__tag {
-    padding: 0 5px;
+    padding: 3px 10px;
     border-radius: 10px;
     font-size: 0.75rem;
 
