--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -5,14 +5,8 @@ body {
   background-color: $Stone;
 }
 .main-container {
-  background-color: $Stone2;
-  height: 80vh;
-  border: 1px solid $Black;
-  border-radius: 20px 20px 0 0;
-  display: flex;
-  flex-direction: column;
+  @include background-card-style($Stone2);
   justify-content: space-evenly;
-  align-items: center;
 }
 
 .physics {
