styling notes page

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  height: 30vh;
+  height: 28vh;
   &--blue {
     background-color: $Sky;
   }
@@ -16,11 +16,13 @@
   }
 
   &__logo {
-    width: 100%;
+    width: 19.375rem;
   }
   &__logo-link {
     width: 90%;
     align-self: center;
+    display:flex;
+    align-items:center;
   }
 
   &__button-container {
