--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -29,10 +29,20 @@
   font-weight: 500;
   margin-bottom: 2rem;
 }
-
+@mixin heading-two {
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 500;
+  margin:0.5rem 0;
+}
 @mixin heading-three {
   font-size: 22px;
   font-weight: 400;
   margin: 0;
   padding: 0;
+}
+
+@mixin body-text {
+  font-size: 16px;
+  line-height: 20px;
 }
