--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -11,6 +11,7 @@
     border: 1px solid $Black;
     border-radius: 20px;
     padding: 1rem;
+    margin: 2rem 0;
     gap: 1rem;
   }
   &__title {
