--- a/src/pages/Notes/Physics/Kinematics/KinematicsNotes.scss
+++ b/src/pages/Notes/Physics/Kinematics/KinematicsNotes.scss
@@ -4,7 +4,7 @@
 .kinematics-notes {
   @include background-card-style($Stone);
   padding: 1rem;
-  gap:2rem;
+
   &__title {
     @include heading-one;
     margin: 1rem 0;
@@ -21,5 +21,9 @@
     padding: 0.5rem;
     border: none;
     border-radius: 15px;
+  }
+  &__container-one,
+  &__container-two {
+    padding: 2rem 0;
   }
 }
