--- a/src/components/Notes/VectorNotes/VectorNotes.scss
+++ b/src/components/Notes/VectorNotes/VectorNotes.scss
@@ -16,9 +16,9 @@
 .notes__button {
   padding: 1rem 2rem;
   border-radius: 15px;
-  background-color: $Plum;
-  border: none;
-  color: $Stone;
+  background-color: $Lilac;
+  border: 1px solid $Black;
+  color: $Black;
   font-weight: 600;
   font-size: 16px;
   box-shadow: -4px 4px $Black;
