--- a/src/pages/BookASession/BookASession.scss
+++ b/src/pages/BookASession/BookASession.scss
@@ -7,8 +7,7 @@
     background: linear-gradient(
       135deg,
       /* Gradient angle */ $Coral,
-      /* Starting color */ $Red,
-
+      /* Starting color */ $Red
     );
     padding: 2rem;
     height: 90vh;
@@ -16,15 +15,18 @@
   &__calendar {
     border: 1px solid #ccc; /* Optional border */
     border-radius: 8px; /* Rounded corners for style */
-    height: 390px;
+    height: 500px;
     overflow: hidden; /* Crop content overflowing container */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  }
+  &__title {
+    @include heading-one;
   }
 }
 
 .booking__calendar iframe {
   width: 100%; /* Full width of the container */
-  height: 400px; /* Specific height */
+  height: 500px; /* Specific height */
   border: none; /* Remove default border */
   transition: transform 0.3s ease-in-out; /* Add transition effect */
 }
