--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,18 @@
 @use "../../styles/variables" as *;
+@use "../../styles/mixins" as *;
+
 .nav {
   background-color: $Stone;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   height: 28vh;
+  @include desktop {
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    height: 15vh;
+  }
   &--blue {
     background-color: $Sky;
   }
@@ -24,6 +32,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    @include desktop {
+      justify-content: flex-start;
+      width: auto;
+      margin-right: 2rem;
+    }
   }
 
   &__button-container {
@@ -32,6 +45,10 @@
     align-self: flex-end;
     justify-content: center;
     gap: 0.8rem;
+    @include desktop {
+      align-self: center;
+      justify-content: flex-start;
+    }
   }
   &__button {
     border: 2px solid $Black;
