adds loading component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $Black: #09050e;
 $Sage: #72a98f;
 $Forest: #3e6259;
 $Lilac: #d6d2fe;
+$Lilac-20: rgba($Lilac, 0.2);
 $Plum: #88527f;
 $ElectricBlue: #4d5eff;
 $Sky: #acd7ec;
@@ -18,3 +19,4 @@ $Red: #e15554;
 $DarkRed: #98292b;
 $Coral: #e77373;
 $Stone2: #f3ebe5;
+
