--- a/src/pages/Quiz/Quiz.scss
+++ b/src/pages/Quiz/Quiz.scss
@@ -6,4 +6,36 @@
     @include background-card-style($Stone);
     padding: 1rem;
   }
+  &__question-container {
+    padding: 0 1rem;
+  }
+  &__main-question-container {
+    display: flex;
+  }
+  &__question {
+    @include body-text;
+  }
+  &__question-number {
+    font-weight: 700;
+    margin-right: 0.625rem;
+  }
+  &__input {
+    width: 100%;
+    height: 2rem;
+    font-style: italic;
+    font-size: 14px;
+    background-color: $Lilac-20;
+    border-radius: 10px;
+    border: 2px solid $Plum;
+    padding-left: 5px;
+    &:focus {
+      outline: 2px solid $Lilac;
+    }
+  }
+  &__question-part-container {
+    display: flex;
+  }
+  &__submit-button {
+    margin: 0 auto;
+  }
 }
