adds under construction site

--- a/src/pages/Quiz/Quiz.scss
+++ b/src/pages/Quiz/Quiz.scss
@@ -4,7 +4,9 @@
 .quiz {
   &__container {
     @include background-card-style($Stone);
-    padding: 1rem;
+    & {
+      padding: 1rem;
+    }
   }
   &__question-container {
     padding: 0 1rem;
@@ -14,14 +16,15 @@
   }
   &__question {
     @include body-text;
+    margin-top: 1rem;
   }
   &__question-number {
     font-weight: 700;
     margin-right: 0.625rem;
   }
   &__input {
-    width: 100%;
-    height: 2rem;
+    width: 90%;
+    height: 2.5rem;
     font-style: italic;
     font-size: 14px;
     background-color: $Lilac-20;
@@ -36,6 +39,38 @@
     display: flex;
   }
   &__submit-button {
-    margin: 0 auto;
+    width: 8rem;
+    height: 2.875rem;
+    margin: 1rem 0;
+    border-radius: 20px;
+    background-color: $Plum;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: $Stone;
+    border: none;
+    box-shadow: -4px 4px $Black;
+    transition: all 0.2s ease; // Smooth transition effect
+    &:active {
+      box-shadow: 0 0 0 $Black; // Removes the shadow
+      transform: translate(-4px, 4px);
+    }
+  }
+
+  &__next-button {
+    @extend .quiz__submit-button;
+    background-color: $Lilac;
+    color: $Plum;
+    height: 2rem;
+    width: 6rem;
+    text-transform: lowercase;
+  }
+  &__submission-container {
+    @include flex-center-column;
+  }
+  &__feedback {
+    @include body-text;
+    margin-top: 2rem;
+    margin-bottom: 0;
+    color: $Plum;
   }
 }
