--- a/src/pages/TopicMenu/TopicMenu.scss
+++ b/src/pages/TopicMenu/TopicMenu.scss
@@ -22,7 +22,7 @@
   @include card-style($Coral);
 }
 .topic-container:nth-child(3) {
-  @include card-style($Clementine);
+  @include card-style($Sage);
 }
 
 .topic-container {
