--- a/src/components/QuizHeader/QuizHeader.scss
+++ b/src/components/QuizHeader/QuizHeader.scss
@@ -6,19 +6,25 @@
   background-color: $Lilac;
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
   padding: 1rem;
+  &__title {
+    @include heading-one;
+    margin-bottom: 0.625rem;
+  }
 }
 
 .progress-bar__bg {
   background-color: $Stone;
   width: 100%;
-  height: 8px;
-  padding: 1px 2px;
-  border-radius: 4px;
+  height: 0.625rem;
+  padding: 0.125rem;
+  border-radius: 0.3125rem;
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2);
 }
 .progress {
-  background-color: $Plum;
-  height: 6px;
+  background: linear-gradient(90deg, $Plum, lighten($Plum, 20%));
+  height: 100%; 
   border-radius: 3px;
+  transition: width 0.4s ease-in-out;
 }
