--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   list-style: none;
+  background-color: black;
 }
+
 * {
   box-sizing: border-box;
 }
@@ -11,4 +13,22 @@ body {
 html {
   padding: 0;
   margin: 0;
+}
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in-out;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
 }
