--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -30,6 +30,12 @@
   background-position: center;
   border-radius: 50%;
   border: 1px solid $Black;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+
+  &:hover {
+    transform: scale(1.1);
+    background-color: lighten($Lilac, 10%);
+  }
 
   &--purple {
     background-color: $Lilac;
