adds navbar to homepage

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: flex-start;
     height: 15vh;
+    padding: 0 8rem;
   }
   &--blue {
     background-color: $Sky;
