--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -5,9 +5,9 @@
   border: 2px solid $Black;
   border-radius: 15px;
   box-shadow: -4px 4px $Black;
-  transition: all 0.2s ease; 
+  transition: all 0.2s ease;
   &:active {
-    box-shadow: 0 0 0 $Black; 
+    box-shadow: 0 0 0 $Black;
     transform: translate(-4px, 4px);
   }
 }
@@ -22,8 +22,10 @@
   align-items: center;
   z-index: 1;
   margin-top: -1.875rem;
-  @include desktop{
-    margin-top:-0.8rem;
+  @include desktop {
+    margin-top: -0.8rem;
+    min-height: 90vh;
+    width:70vw;
   }
 }
 @mixin heading-one {
@@ -36,7 +38,7 @@
   font-size: 24px;
   font-style: italic;
   font-weight: 500;
-  margin:0.5rem 0;
+  margin: 0.5rem 0;
 }
 @mixin heading-three {
   font-size: 22px;
@@ -45,8 +47,8 @@
   padding: 0;
 }
 
-@mixin flex-center-column{
-  display:flex;
+@mixin flex-center-column {
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
