--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -32,67 +32,72 @@ body {
 }
 
 .physics {
+  @include card-style($Sky);
+  background-image: url("../../assets/physics-home.png");
+  background-position-x: -20px;
+  background-size: 180px;
+}
+
+.math {
+  @include card-style($Clementine);
+  background-image: url("../../assets/math-home.png");
+  background-position-x: -20px;
+  background-size: 200px;
+  @include desktop {
+    background-position-y: 5rem;
+  }
+}
+
+.physics,
+.math {
   height: 170px;
   width: 80%;
-  @include card-style($Sky);
   padding: 1.5rem 1rem;
   display: flex;
   flex-direction: column-reverse;
   justify-content: flex-end;
   align-items: flex-end;
-  background-image: url("../../assets/physics-home.png");
-  background-position-x: -20px;
-  background-size: 180px;
   background-repeat: no-repeat;
   @include desktop {
     height: 25rem;
     width: 25rem;
-    background-size: 400px;
-  }
-}
-
-.math {
-  height: 170px;
-  width: 80%;
-  padding: 1rem;
-  @include card-style($Clementine);
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: center;
-  align-items: flex-end;
-  background-image: url("../../assets/math-home.png");
-  background-position-x: -20px;
-  background-size: 200px;
-  background-repeat: no-repeat;
-  @include desktop {
-    height: 25rem;
-    width: 25rem;
-    background-size: 400px;
+    background-size: 18rem;
+    justify-content: flex-start;
   }
 }
 
 .card {
   &__physics-icon,
   &__math-icon {
-    background-color: $Stone;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
+    width: 3.125rem;
+    height: 3.125rem;
+    border-radius: 50%;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 40px 40px;
+    background-size: 2.5rem 2.5rem;
+    @include desktop {
+      width: 4.375rem;
+      height: 4.375rem;
+      background-size: 3.125rem 3.125rem;
+      border-radius: 50%;
+    }
   }
   &__physics-icon {
     background-image: url("../../assets/physics-icon.svg");
-    border: 2px solid $ElectricBlue
+    border: 2px solid $ElectricBlue;
+    background-color: $ElectricBlue;
   }
   &__math-icon {
     background-image: url("../../assets/math-icon.svg");
+    background-color: $Sunset;
     border: 2px solid $Sunset;
   }
   &__title {
     font-size: 1.75rem;
-    margin-top: 1rem;
+    margin: 1rem 0;
     font-weight: 700;
+    @include desktop{
+      font-size: 36px;
+    }
   }
 }
