styling homepage for desktop

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,8 +11,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    height: 15vh;
-    padding: 0 8rem;
+    height: 150px;
   }
   &--blue {
     background-color: $Sky;
