--- a/src/pages/PracticeQuestions/PracticeQuestions.scss
+++ b/src/pages/PracticeQuestions/PracticeQuestions.scss
@@ -3,5 +3,7 @@
 
 .practice-question__container {
   @include background-card-style($Stone);
-  padding: 1rem 1.5rem;
+  & {
+    padding: 1rem 1.5rem;
+  }
 }
