--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -8,24 +8,40 @@
   width: 100%;
   border-radius: 15px;
   border: 2px solid $Black;
-  &--purple {
-    background: linear-gradient(290deg, lighten($Plum, 10%), $Plum);
-  }
-  &--red {
-    background-color: $DarkRed;
-  }
-  &--orange {
-    background-color: $Sunset;
-  }
-  &--green {
-    background-color: $Forest;
-  }
-  &--pink {
-    background-color: $Bubblegum;
-  }
   @include desktop {
     flex-direction: column;
-    width: auto;
+    justify-content: flex-start;
+    gap: 2rem;
+    width: 5.5rem;
+    margin-top: 9.375rem;
+  }
+  &--purple {
+    background: linear-gradient(290deg, rgba($Plum, 80%), $Plum);
+  }
+  &--red {
+    background: linear-gradient(290deg, rgba($DarkRed, 90%), $DarkRed);
+  }
+  &--orange {
+    background: linear-gradient(290deg, rgba($Sunset, 90%), $Sunset);
+  }
+  &--green {
+    background: linear-gradient(290deg, rgba($Forest, 90%), $Forest);
+  }
+  &--green-reverse {
+    background: linear-gradient(290deg, rgba($Sage, 90%), $Sage);
+  }
+  &--pink {
+    background: linear-gradient(290deg, rgba($Bubblegum, 80%), $Bubblegum);
+  }
+
+  &__text {
+    display: none;
+    @include desktop {
+      display: block;
+      font-style: italic;
+      color: $ForestText;
+      margin: 0;
+    }
   }
 }
 
@@ -43,7 +59,7 @@
 
   &:hover {
     transform: scale(1.1);
-    background-color: lighten($Lilac, 10%);
+    background-color: rgba($Lilac, 10%);
   }
 
   &--purple {
@@ -57,6 +73,9 @@
   }
   &--green {
     background-color: rgba($Sage, 0.9);
+  }
+  &--green-reverse {
+    background-color: $Forest;
   }
   &--pink {
     background-color: $Barbie;
@@ -72,5 +91,13 @@
   }
   &--about {
     background-image: url("../../assets/about-icon.png");
+  }
+}
+
+a {
+  @include desktop {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
