--- a/src/pages/TopicPage/TopicPage.scss
+++ b/src/pages/TopicPage/TopicPage.scss
@@ -3,7 +3,9 @@
 .topic-page {
   &__container {
     @include background-card-style($Stone2);
-    justify-content: flex-start;
+    & {
+      justify-content: flex-start;
+    }
     &--kinematics {
       @include background-card-style($Lilac);
     }
