--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,16 +16,15 @@
   background-color: $color;
   border: 1px solid $Black;
   border-radius: 20px 20px 0 0;
-  min-height: 80vh;
   display: flex;
+  height: 80vh;
   flex-direction: column;
   align-items: center;
   z-index: 1;
   margin-top: -1.875rem;
   @include desktop {
     margin-top: -0.8rem;
-    min-height: 90vh;
-    width:70vw;
+    height: 90vh;
   }
 }
 @mixin heading-one {
