--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -17,14 +17,14 @@
   border: 1px solid $Black;
   border-radius: 20px 20px 0 0;
   display: flex;
-  height: 80vh;
+  min-height: 80vh;
   flex-direction: column;
   align-items: center;
   z-index: 1;
   margin-top: -1.875rem;
   @include desktop {
     margin-top: -0.8rem;
-    height: 90vh;
+    min-height: 30vh;
   }
 }
 @mixin heading-one {
