--- a/src/pages/TopicMenu/TopicMenu.scss
+++ b/src/pages/TopicMenu/TopicMenu.scss
@@ -50,6 +50,9 @@
   margin: 0 1rem 1rem 1rem;
   @include desktop {
     width: 31.25rem;
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
 .topic-list {
