--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -55,11 +55,12 @@
     padding: 0.5rem 0.5rem;
     border-radius: 27px;
     transition: all 0.1s ease;
-    &:active, &:hover {
+    &:active,
+    &:hover {
       background-color: $Black;
       color: $Stone;
+      cursor: pointer;
     }
-
   }
 }
 
