--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -9,11 +9,19 @@
   border-radius: 15px;
   border: 2px solid $Black;
   @include desktop {
-    flex-direction: column;
     justify-content: flex-start;
     gap: 2rem;
     width: 5.5rem;
-    margin-top: 9.375rem;
+  }
+  &--row {
+    flex-direction: row;
+    width: fit-content;
+  }
+  &--column {
+    flex-direction: column;
+    & > .homepage__nav-container {
+      margin-top: 9.375rem;
+    }
   }
   &--purple {
     background: linear-gradient(290deg, rgba($Plum, 80%), $Plum);
@@ -39,7 +47,7 @@
     @include desktop {
       display: block;
       font-style: italic;
-      color: $ForestText;
+      color: black;
       margin: 0;
     }
   }
