--- a/src/pages/Notes/Physics/Kinematics/KinematicsNotes.scss
+++ b/src/pages/Notes/Physics/Kinematics/KinematicsNotes.scss
@@ -2,9 +2,21 @@
 @use "../../../../styles/variables" as *;
 
 .kinematics-notes {
-  @include background-card-style($Stone);
-  & {
-    padding: 1rem;
+  @include desktop {
+    background-color: $Lilac;
+    display: flex;
+    flex-direction: column;
+  }
+  &__container {
+    @include background-card-style($Stone);
+    & {
+      padding: 1rem;
+    }
+
+    @include desktop {
+      width: 51rem;
+      align-self: center;
+    }
   }
 
   &__title {
@@ -16,6 +28,10 @@
     width: 75%;
     flex-direction: row;
     justify-content: space-around;
+    @include desktop {
+      justify-content: center;
+      gap: 1rem;
+    }
   }
   &__button {
     background-color: $Plum;
@@ -23,9 +39,18 @@
     padding: 0.5rem;
     border: none;
     border-radius: 15px;
+    &:hover {
+      cursor: pointer;
+      background-color: $Lilac;
+      color: black;
+      outline: 1px solid $Plum;
+    }
   }
   &__container-one,
   &__container-two {
     padding: 2rem 0;
+    @include desktop {
+      width: 75%;
+    }
   }
 }
