--- a/src/components/HeaderNoNav/HeaderNoNav.scss
+++ b/src/components/HeaderNoNav/HeaderNoNav.scss
@@ -4,7 +4,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  height: 23vh;
+  height: 9.375rem;
   &--blue {
     background-color: $Sky;
   }
