--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -2,9 +2,19 @@
 @use "../../styles/variables" as *;
 
 .about {
+  display: flex;
+  flex-direction: column;
+
   &__container {
     @include background-card-style($Forest);
-    &{justify-content: flex-start};
+    & {
+      justify-content: flex-start;
+    }
+    @include desktop {
+      width: 50rem;
+      align-self: center;
+      min-height: 100vh;
+    }
   }
   &__title {
     @include heading-one;
@@ -12,11 +22,62 @@
   }
   &__paragraph {
     font-size: 13px;
-    line-height:16px;
+    line-height: 16px;
     color: $Stone;
     margin: 0;
+    @include desktop {
+      font-size: 16px;
+      line-height: 20px;
+    }
   }
   &__paragraph-container {
     padding: 1rem 2rem;
+    @include desktop {
+      width: 75%;
+    }
+  }
+  &__email {
+    &-button {
+      background-color: rgba($Sage, 80%);
+      padding: 0.5rem;
+      border-radius: 15px;
+      margin-top: 2rem;
+      box-shadow: (-4px 4px black);
+      border: 1px solid $ForestText;
+      transition: all 2s ease;
+
+      &:hover {
+        background: linear-gradient(
+          320deg,
+          rgba($Sage, 15%) 0%,
+          rgba($Sage, 60%) 80%,
+          rgba($Sage, 15%) 100%
+        );
+        background-size: 200%;
+        animation: shimmer 1s;
+      }
+
+      &:active {
+        box-shadow: 0 0 0 $Black;
+        transform: translate(-4px, 4px);
+      }
+    }
+
+    &-link {
+      color: $ForestText;
+      font-size: 1rem;
+      &:hover {
+        color: $Stone;
+      }
+    }
+  }
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -100%;
+  }
+  100% {
+    background-position: 200%;
   }
 }
