adjusts colors and spacing on homepage

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -62,7 +62,7 @@
 
   &:hover {
     transform: scale(1.1);
-    background-color: rgba($Lilac, 50%);
+    background-color: $Stone2;
   }
 
   &--purple {
