--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -15,7 +15,7 @@
   &--column {
     flex-direction: column;
     justify-content: flex-start;
-    gap:2rem;
+    gap: 2rem;
     width: 5.5rem;
   }
   &--purple {
@@ -42,8 +42,13 @@
     @include desktop {
       display: block;
       font-style: italic;
-      color: black;
+      color: $Black;
       margin: 0;
+      font-size: 14px;
+      margin-top: 5px;
+      &:hover {
+        color: $Stone;
+      }
     }
   }
 }
@@ -102,5 +107,16 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-decoration: none; // Ensure no underline on links
+
+    &:hover {
+      .icon {
+        transform: scale(1.1);
+        background-color: $Stone2;
+      }
+      .nav-bar__text {
+        color: $Stone; // Text color on hover
+      }
+    }
   }
 }
