--- a/src/components/QuizHeader/QuizHeader.scss
+++ b/src/components/QuizHeader/QuizHeader.scss
@@ -29,7 +29,7 @@
   }
 }
 .progress {
-  background: linear-gradient(90deg, $Plum, lighten($Plum, 20%));
+  background: linear-gradient(90deg, $Plum, rgba($Plum, 80%));
   height: 100%;
   border-radius: 3px;
   transition: width 0.4s ease-in-out;
