--- a/src/pages/TopicPage/TopicPage.scss
+++ b/src/pages/TopicPage/TopicPage.scss
@@ -45,10 +45,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    width: 75%;
-    margin-bottom: 2rem;
-    height: 30vh;
+    width: 100%;
+    gap: 2rem;
+    height: 14rem;
     &:hover {
       cursor: pointer;
     }
@@ -71,9 +70,13 @@
     }
   }
   &__cards-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 2rem;
+    min-width: 320px;
     @include desktop {
-      display: flex;
-      flex-direction: column;
       justify-content: space-around;
       gap: 2rem;
     }
@@ -89,7 +92,7 @@
     width: 9.375rem;
     @include desktop {
       height: 9rem;
-      width:10rem;
+      width: 10rem;
     }
   }
 }
